# blackBook-predictionmarket

./: .env  .env.example  .gitignore  ADVANCED_FEATURES.md  Cargo.toml  README.md  SYSTEM_GUIDE.md  contex.txt  requirements.txt  serve_frontend.py  start.bat  start.sh  start_agent.bat  start_agent.sh  test_agent.py  test_comprehensive.py  url_scraper.py
contracts/: package.json
event_feed_service/: README.md  main.py  pyproject.toml  requirements.txt  start.bat
frontend/: admin-panel.html  blackbook-layer1.html  index.html  marketplace.html
logs/: run_1761690742_scraped.json  run_1761690982_event.json  run_1761691253_event.json  run_1761691815_event.json  run_1761694350_event.json  run_1761694524_scraped.json  run_1761695121_event.json  run_1761706430_event.json  run_1761706430_scraped.json
migrations/: 001_initial.sql
src/: blockchain.rs  blockchain_core.rs  coindesk.rs  consensus.rs  escrow.rs  event_scraper.rs  ledger.rs  live_market.rs  main.rs  main_old.rs  market.rs  node_types.rs  objectwire_parser.rs  price_oracle.rs  scraper.rs  tech_events.rs  transaction.rs
