[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackbook-event-feed"
version = "1.0.0"
description = "BlackBook Event Feed Service - Real-time event data for prediction markets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BlackBook Team", email = "team@blackbook.io"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "httpx==0.25.0",
    "feedparser==6.0.10",
    "pydantic==2.4.2",4
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[tool.uv]
python-version = "3.10"

[tool.uv.sources]
